# Cognea

./: .coverage  .coveragerc  .dockerignore  .env.test  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  COVERAGE_ACHIEVEMENT_REPORT.md  Dockerfile  Dockerfile.frontend  FINAL_COVERAGE_ACHIEVEMENT_REPORT.md  FINAL_STATUS_REPORT.md  Feature_Tech_Stack_Breakdown.md  LICENSE  PROJECT_PLAN.md  QUICK_START.md  README.md  SECURITY.md  TESTING_ACHIEVEMENTS_SUMMARY.md  TESTING_PROGRESS.md  TESTING_PROGRESS_FINAL.md  TESTING_PROGRESS_FINAL_SUMMARY.md  TEST_COVERAGE_PROGRESS.md  TEST_COVERAGE_REPORT.md  TODO.md  app.py  comprehensive_coverage_booster.py  comprehensive_test_fixer.py  coverage.json  coverage.txt  coverage_booster.py  deploy_production.sh  docker-compose.monitoring.yml  docker-compose.yml  dump.rdb  env.production.template  final_coverage_push.py  fix_indentation_errors.py  fix_mypy_errors.py  fix_remaining_indentation.py  (+45 more)
.next/: build-manifest.json  trace
AI Logic implementation.xcworkspace/: contents.xcworkspacedata
config/: monitoring.py  security.py
contexts/: AuthContext.js  ThemeContext.js
docs/: ADVANCED_AI_ROADMAP.md  AI_Personalization_Roadmap.md  API_ENDPOINTS.md  API_VERSIONING.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_ONBOARDING.md  EXAM_PAPER_SYSTEM.md  FRONTEND_RESTART_PLAN.md  Feature_Tech_Stack_Breakdown.md  MVP_FEATURE_REMOVAL_PLAN.md  NOTION_WEBHOOK_SETUP.md  Notion_Integration_Capabilities.md  PROJECT_PLAN.md  README.md  SECURITY_PERFORMANCE.md  SMART_SCHEDULING_IMPLEMENTATION.md  STRIPE_INTEGRATION.md  TECHNICAL_ANALYSIS.md  TODO.md  USER_GUIDE.md  cognie_ai_logic_scheme.md  personalization_endpoints_checklist.md
middleware/: auth.py  error_handler.py  logging.py  rate_limit.py
migrations/: add_cost_tracking_tables.sql  add_exam_paper_tables.sql  add_feature_flag_settings.sql  add_flashcard_cache_table.sql  add_notion_last_synced_ts.sql  add_notion_sync_table.sql  add_primary_goals_array.sql  add_stripe_tables.sql
models/: __init__.py  audit_log.py  auth.py  diary.py  feature_flag.py  flashcard.py  goal.py  habit.py  notification.py  plan.py  schedule_block.py  subscription.py  task.py  text.py  user.py
pages/: ai-study-coach.js  analytics.js  calendar.js  dashboard.js  exam-papers.js  forgot-password.js  goals.js  index.js  insights.js  journal.js  login.js  memory.js  planner.js  reset-password.js  settings.js
routes/: __init__.py  ai.py  ai_study_coach.py  analytics.py  auth.py  calendar.py  diary.py  exam_papers.py  fitness.py  flashcards.py  generate.py  goals.py  habits.py  mood.py  notifications.py  notion.py  privacy.py  profile.py  schedule_blocks.py  stripe.py  tasks.py  user.py  user_settings.py
scripts/: setup-docker.sh
services/: ai_cache.py  api.js  audit.py  audit_dependency.py  auth.py  auth_service.py  background_tasks.py  background_workers.py  cache.py  celery_app.py  cost_tracking.py  email.py  email_service.py  exam_paper_processor.py  feature_flag_service.py  monitoring.py  openai_integration.py  performance.py  performance_monitor.py  prometheus_integration.py  rate_limited_queue.py  redis_cache.py  scheduler.py  (+5 more)
(+147 files in other folders)
